# sancho

./: .gitignore  README.md  pyproject.toml
sancho/: build_grammar.py  db.py  defaults.py  dglload.py  etl.py  lang_server.py  load_data.py  model.py  neo4jconnecting.py  neo4jschema.py  parsing.py
sancho/sql/: load.sql
