[tool.poetry]
name = "sancho"
version = "0.1.0"
description = ""
authors = ["Renan Fonseca <renanfonseca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

python-dotenv = "^0.19.0"

tree-sitter = "^0.19.0"
pygls = "^0.11.2"
black = "^21.8b0"
more-itertools = "^8.8.0"
loguru = "^0.5.3"

PyGithub = "^1.55"
GitPython = "^3.1.24"

py2neo = "^2021.2.3"
neomodel = "^4.0.5"
pugsql = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.10.2"

[tool.poetry.scripts]
build_tree_sitter = "sancho.build_grammar:main"
fetch_repos = "sancho.etl:clone_starred_python"
lang_server = "sancho.lang_server:main"
migrate = "sancho.neo4jschema:migrate"

[tool.pytest.ini_options]
addopts = "--ignore=sancho/data --capture=no"

[tool.black]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
